cart menu not popup anymore login menu popup

--- a/src/main/resources/fxml/CartMenu.fxml
+++ b/src/main/resources/fxml/CartMenu.fxml
@@ -28,6 +28,7 @@
             <Font size="20.0" />
          </font>
       </Label>
+      <Button text="back" onMouseClicked="#back"></Button>
    </children>
 
 
