--- a/src/main/resources/fxml/BuyerMenu/BuyLog.fxml
+++ b/src/main/resources/fxml/BuyerMenu/BuyLog.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
@@ -17,8 +18,7 @@
                        <MenuItem mnemonicParsing="false" onAction="#goToCart" text="View Cart" />
                        <MenuItem mnemonicParsing="false" onAction="#goToShopMenu" text="Shop Menu" />
                        <MenuItem mnemonicParsing="false" onAction="#goToDiscounts" text="Discounts" />
-                       <MenuItem mnemonicParsing="false" onAction="#goToDiscountCodes" text="View Orders" />
-                  <MenuItem mnemonicParsing="false" text="Edit" onAction="#viewEditPersonalInfo"/>
+                  <MenuItem mnemonicParsing="false" onAction="#viewEditPersonalInfo" text="Edit" />
                        <MenuItem mnemonicParsing="false" onAction="#logout" text="Logout" />
                        <MenuItem mnemonicParsing="false" onAction="#Exit" text="Exit" />
                    </items>
@@ -30,6 +30,20 @@
                </Menu>
            </menus>
        </MenuBar>
+      <ListView fx:id="buyLogListView" layoutX="149.0" layoutY="99.0" prefHeight="453.0" prefWidth="339.0" />
+      <ListView fx:id="detailsListView" layoutX="600.0" layoutY="93.0" prefHeight="461.0" prefWidth="321.0" />
+      <Label alignment="CENTER" layoutX="158.0" layoutY="50.0" prefHeight="17.0" prefWidth="321.0" text="Buy Log">
+         <font>
+            <Font name="System Bold Italic" size="29.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="599.0" layoutY="63.0" prefHeight="30.0" prefWidth="321.0" text="details">
+         <font>
+            <Font name="System Italic" size="20.0" />
+         </font>
+      </Label>
+      <Button layoutX="700.0" layoutY="577.0" mnemonicParsing="false" onAction="#showItem" prefHeight="64.0" prefWidth="136.0" text="show Item" />
+      <Label fx:id="buyLogEmptyLabel" layoutX="149.0" layoutY="99.0" prefHeight="17.0" prefWidth="339.0" />
    </children>
 
 
