--- a/src/main/resources/fxml/SellerMenu/SellerSalesHistory.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerSalesHistory.fxml
@@ -1,24 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="View.Menus.MenuController.SellerMenuController.SellerSalesHistory"
-            prefHeight="1280.0" prefWidth="720.0">
-
-    <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
-        <menus>
-            <Menu mnemonicParsing="false" text="option">
-
-                <MenuItem mnemonicParsing="false" text="back" onAction="#back" ></MenuItem>
-                <MenuItem mnemonicParsing="false" text="logout" onAction="#logout"></MenuItem>
-            </Menu>
-        </menus>
-    </MenuBar>
+<AnchorPane prefHeight="1280.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.SellerMenuController.SellerSalesHistory">
+   <children>
+   
+       <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
+           <menus>
+               <Menu mnemonicParsing="false" text="option">
+                  <items>
+      
+                      <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
+                      <MenuItem mnemonicParsing="false" onAction="#logout" text="logout" />
+                  </items>
+               </Menu>
+           </menus>
+       </MenuBar>
+      <ListView fx:id="saleLog" layoutX="172.0" layoutY="118.0" prefHeight="470.0" prefWidth="349.0" />
+      <ListView fx:id="itemListView" layoutX="691.0" layoutY="118.0" prefHeight="470.0" prefWidth="309.0" />
+      <Button layoutX="810.0" layoutY="604.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="91.0" text="show Item" />
+      <Label alignment="CENTER" layoutX="168.0" layoutY="85.0" prefHeight="17.0" prefWidth="349.0" text="Sale Log">
+         <font>
+            <Font name="System Bold Italic" size="19.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="691.0" layoutY="89.0" prefHeight="17.0" prefWidth="309.0" text="Items">
+         <font>
+            <Font name="System Italic" size="15.0" />
+         </font>
+      </Label>
+   </children>
 
 </AnchorPane>
