sale log added to the project! we have some exceptions that throws in login after cart Menu!

--- a/src/main/resources/fxml/SellerMenu/SellerSalesHistory.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerSalesHistory.fxml
@@ -34,6 +34,7 @@
             <Font name="System Italic" size="15.0" />
          </font>
       </Label>
+      <Label fx:id="SaleLogLabel" layoutX="172.0" layoutY="118.0" prefHeight="17.0" prefWidth="349.0" />
    </children>
 
 </AnchorPane>
