--- a/src/main/resources/fxml/BuyerRegisterMenu.fxml
+++ b/src/main/resources/fxml/BuyerRegisterMenu.fxml
@@ -14,7 +14,7 @@
             <String fx:value="myTextField" />
             <String fx:value="myTextField" />
          </styleClass></TextField>
-       <PasswordField fx:id="passwordField" layoutX="900.0" layoutY="121.0" prefHeight="25.0" prefWidth="128.0" />
+       <PasswordField fx:id="passwordField" layoutX="900.0" layoutY="118.0" prefHeight="25.0" prefWidth="128.0" promptText="Password" styleClass="myTextField" />
       <TextField fx:id="firstNameTextField" layoutX="720.0" layoutY="235.0" prefHeight="25.0" prefWidth="128.0" promptText="First Name" styleClass="myTextField" />
       <TextField fx:id="surnameTextField" layoutX="900.0" layoutY="235.0" prefHeight="25.0" prefWidth="128.0" promptText="Surname" styleClass="myTextField" />
       <TextField fx:id="moneyTextField" layoutX="714.0" layoutY="449.0" prefHeight="25.0" prefWidth="128.0" promptText="Balance" styleClass="myTextField" />
@@ -30,9 +30,9 @@
       <Label fx:id="moneyLabel" layoutX="379.0" layoutY="441.0" prefHeight="17.0" prefWidth="150.0" />
       <Label fx:id="emailLabel" layoutX="377.0" layoutY="476.0" prefHeight="17.0" prefWidth="150.0" />
       <Label fx:id="phoneNumberLabel" layoutX="380.0" layoutY="526.0" prefHeight="17.0" prefWidth="149.0" />
-      <TextField fx:id="passwordTextField" layoutX="900.0" layoutY="120.0" prefHeight="27.0" prefWidth="128.0" promptText="Password" styleClass="myTextField" />
+      <TextField fx:id="passwordTextField" layoutX="900.0" layoutY="118.0" prefHeight="27.0" prefWidth="128.0" promptText="Password" styleClass="myTextField" />
       <Button layoutY="27.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="102.0" text="Back" />
-      <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="1280.0">
+      <MenuBar layoutX="1.0" prefHeight="25.0" prefWidth="1280.0">
         <menus>
           <Menu mnemonicParsing="false" text="Loign or Register">
             <items>
