--- a/src/main/resources/fxml/AdminMenu/ManageProducts.fxml
+++ b/src/main/resources/fxml/AdminMenu/ManageProducts.fxml
@@ -9,7 +9,7 @@
             <MenuItem onAction="#back" text="back" />
         </Menu>
     </MenuBar>
-    <ListView fx:id="listView" layoutY="47.0" prefHeight="283.0" prefWidth="277.0" />
+    <ListView fx:id="listView" onMouseClicked="#selectItem" layoutY="47.0" prefHeight="283.0" prefWidth="277.0" />
    <ChoiceBox fx:id="sortChoiceBox" layoutX="387.0" layoutY="9.0" onAction="#sort" prefHeight="27.0" prefWidth="206.0" />
     <Label layoutX="356.0" layoutY="14.0" text="sort:" />
 
