--- a/src/main/resources/fxml/AdminMenu/ManageProductsIn.fxml
+++ b/src/main/resources/fxml/AdminMenu/ManageProductsIn.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="118.0" prefWidth="259.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.ManageProductsIn">
-            <Button layoutX="144.0" layoutY="46.0" prefHeight="27.0" prefWidth="97.0" text="delete" />
-            <Button layoutX="21.0" layoutY="46.0" prefHeight="27.0" prefWidth="97.0" text="exit" onMouseClicked="#exit" />
+           <Button layoutX="66.0" layoutY="59.0" text="Yes" onMouseClicked="#delete" />
+           <Button layoutX="177.0" layoutY="59.0" text="No" onMouseClicked="#close" />
+           <Label layoutX="44.0" layoutY="20.0" text="do you want to delete this item?" />
 </AnchorPane>
