--- a/src/main/resources/Styles.CSS
+++ b/src/main/resources/Styles.CSS
@@ -31,9 +31,17 @@
         -fx-background-image: url("design/newRegister.png");
     }
 
+    .registerSellerMenu {
+            -fx-background-image: url("design/newRegisterSeller.png");
+    }
+
+    .registerAdminMenu {
+            -fx-background-image: url("design/newRegisterAdmin.png");
+    }
+
     .myTextField{
       -fx-border-color: transparent;
       -fx-border-width: 0 0 0 0;
       -fx-background-color: transparent;
-      -fx-prompt-text-fill: #94a8b3;
+      -fx-prompt-text-fill: black;
     }
