--- a/src/main/resources/fxml/AdminRegisterMenu.fxml
+++ b/src/main/resources/fxml/AdminRegisterMenu.fxml
@@ -1,35 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.LoginRegisterController.AdminRegisterController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="registerAdminMenu" stylesheets="@../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.LoginRegisterController.AdminRegisterController">
    <children>
-      <TextField fx:id="usernameTextField" layoutX="570.0" layoutY="87.0" />
-      <TextField fx:id="firstNameTextField" layoutX="570.0" layoutY="215.0" />
-      <TextField fx:id="surnameTextField" layoutX="570.0" layoutY="292.0" />
-      <TextField fx:id="emailTextField" layoutX="570.0" layoutY="370.0" />
-      <TextField fx:id="phoneNumberTextFiled" layoutX="570.0" layoutY="442.0" />
-      <PasswordField fx:id="passwordField" layoutX="570.0" layoutY="149.0" />
-      <Label layoutX="513.0" layoutY="91.0" prefHeight="17.0" prefWidth="57.0" text="username" />
-      <Label layoutX="513.0" layoutY="153.0" prefHeight="17.0" prefWidth="57.0" text="password" />
-      <Label layoutX="525.0" layoutY="374.0" prefHeight="17.0" prefWidth="33.0" text="Email" />
-      <Label layoutX="517.0" layoutY="219.0" text="firstname" />
-      <Label layoutX="519.0" layoutY="296.0" text="surname" />
-      <Label layoutX="473.0" layoutY="446.0" prefHeight="17.0" prefWidth="81.0" text="phoneNumber" />
-      <Button layoutX="570.0" layoutY="595.0" mnemonicParsing="false" onAction="#register" prefHeight="53.0" prefWidth="137.0" text="Register" />
-      <TextField fx:id="imageDirectory" layoutX="570.0" layoutY="518.0" />
-      <Label layoutX="538.0" layoutY="522.0" text="image" />
-      <Button layoutX="719.0" layoutY="518.0" mnemonicParsing="false" onAction="#fileChooserOpen" text="..." />
-      <CheckBox fx:id="passwordCheckBox" layoutX="719.0" layoutY="153.0" mnemonicParsing="false" text="show Password?" />
-      <TextField fx:id="passwordTextField" layoutX="570.0" layoutY="149.0" />
-      <Label fx:id="usernameLabel" layoutX="570.0" layoutY="112.0" prefHeight="17.0" prefWidth="191.0" />
-      <Label fx:id="passwordLabel" layoutX="570.0" layoutY="173.0" prefHeight="17.0" prefWidth="149.0" />
-      <Label fx:id="firstnameLabel" layoutX="570.0" layoutY="240.0" prefHeight="17.0" prefWidth="149.0" />
-      <Label fx:id="surnameLabel" layoutX="570.0" layoutY="317.0" prefHeight="17.0" prefWidth="149.0" />
-      <Label fx:id="emailLabel" layoutX="570.0" layoutY="395.0" prefHeight="17.0" prefWidth="149.0" />
-      <Label fx:id="phoneNumberLabel" layoutX="570.0" layoutY="467.0" prefHeight="17.0" prefWidth="149.0" />
+      <TextField fx:id="usernameTextField" layoutX="715.0" layoutY="125.0" prefHeight="25.0" prefWidth="137.0" promptText="Username" styleClass="myTextField" />
+      <TextField layoutX="711.0" layoutY="240.0" prefHeight="25.0" prefWidth="137.0" promptText="First Name" styleClass="myTextField" />
+      <TextField fx:id="surnameTextField" layoutX="897.0" layoutY="238.0" prefHeight="25.0" prefWidth="128.0" promptText="Surname" styleClass="myTextField" />
+      <TextField fx:id="emailTextField" layoutX="713.0" layoutY="348.0" prefHeight="25.0" prefWidth="137.0" promptText="Email" styleClass="myTextField" />
+      <TextField fx:id="phoneNumberTextFiled" layoutX="890.0" layoutY="348.0" promptText="Phone" styleClass="myTextField" />
+      <PasswordField fx:id="passwordField" layoutX="890.0" layoutY="125.0" promptText="Password" styleClass="myTextField" />
+      <Button layoutX="879.0" layoutY="550.0" mnemonicParsing="false" onAction="#register" prefHeight="25.0" prefWidth="158.0" text="Register" />
+      <TextField fx:id="imageDirectory" layoutX="715.0" layoutY="454.0" prefHeight="25.0" prefWidth="128.0" promptText="Image" styleClass="myTextField" />
+      <Button layoutX="850.0" layoutY="454.0" mnemonicParsing="false" onAction="#fileChooserOpen" text="..." />
+      <CheckBox fx:id="passwordCheckBox" layoutX="921.0" layoutY="167.0" mnemonicParsing="false" text="show Password?" />
+      <TextField fx:id="passwordTextField" layoutX="890.0" layoutY="125.0" promptText="Password" styleClass="myTextField" />
+      <Label fx:id="usernameLabel" layoutX="688.0" layoutY="150.0" prefHeight="17.0" prefWidth="191.0" />
+      <Label fx:id="passwordLabel" layoutX="880.0" layoutY="150.0" prefHeight="17.0" prefWidth="149.0" />
+      <Label fx:id="firstnameLabel" layoutX="688.0" layoutY="267.0" prefHeight="17.0" prefWidth="149.0" />
+      <Label fx:id="surnameLabel" layoutX="880.0" layoutY="267.0" prefHeight="17.0" prefWidth="149.0" />
+      <Label fx:id="emailLabel" layoutX="688.0" layoutY="373.0" prefHeight="17.0" prefWidth="149.0" />
+      <Label fx:id="phoneNumberLabel" layoutX="879.0" layoutY="373.0" prefHeight="17.0" prefWidth="149.0" />
       <MenuBar prefHeight="25.0" prefWidth="1280.0">
         <menus>
           <Menu mnemonicParsing="false" text="Login or Register">
