--- a/src/main/resources/fxml/BuyerRegisterMenu.fxml
+++ b/src/main/resources/fxml/BuyerRegisterMenu.fxml
@@ -9,30 +9,30 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="721.0" prefWidth="1281.0" styleClass="registerBuyerMenu" stylesheets="@../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.LoginRegisterController.BuyerRegisterController">
    <children>
-      <TextField fx:id="usernameTextField" layoutX="720.0" layoutY="120.0" prefHeight="25.0" prefWidth="128.0" promptText="Username">
+      <TextField fx:id="usernameTextField" layoutX="716.0" layoutY="123.0" prefHeight="25.0" prefWidth="128.0" promptText="Username">
          <styleClass>
             <String fx:value="myTextField" />
             <String fx:value="myTextField" />
          </styleClass></TextField>
-       <PasswordField fx:id="passwordField" layoutX="900.0" layoutY="118.0" prefHeight="25.0" prefWidth="128.0" promptText="Password" styleClass="myTextField" />
-      <TextField fx:id="firstNameTextField" layoutX="720.0" layoutY="235.0" prefHeight="25.0" prefWidth="128.0" promptText="First Name" styleClass="myTextField" />
-      <TextField fx:id="surnameTextField" layoutX="900.0" layoutY="235.0" prefHeight="25.0" prefWidth="128.0" promptText="Surname" styleClass="myTextField" />
-      <TextField fx:id="moneyTextField" layoutX="714.0" layoutY="449.0" prefHeight="25.0" prefWidth="128.0" promptText="Balance" styleClass="myTextField" />
-      <TextField fx:id="emailTextField" layoutX="720.0" layoutY="341.0" prefHeight="25.0" prefWidth="128.0" promptText="Email" styleClass="myTextField" />
-      <TextField fx:id="numberTextField" layoutX="900.0" layoutY="341.0" prefHeight="25.0" prefWidth="128.0" promptText="Phone" styleClass="myTextField" />
-      <CheckBox fx:id="passwordCheckBox" layoutX="910.0" layoutY="161.0" mnemonicParsing="false" text="Show password?" />
-      <Button layoutX="900.0" layoutY="560.0" mnemonicParsing="false" onAction="#register" prefHeight="25.0" prefWidth="128.0" text="Register" />
-      <TextField fx:id="imageDirectory" layoutX="714.0" layoutY="559.0" prefHeight="25.0" prefWidth="128.0" promptText="Image" styleClass="myTextField" />
-      <Label fx:id="usernameLabel" layoutX="348.0" layoutY="333.0" prefHeight="17.0" prefWidth="209.0" />
-      <Label fx:id="passwordLabel" layoutX="378.0" layoutY="361.0" prefHeight="17.0" prefWidth="150.0" />
-      <Label fx:id="firstnameLabel" layoutX="379.0" layoutY="378.0" prefHeight="17.0" prefWidth="149.0" />
-      <Label fx:id="surnameLabel" layoutX="379.0" layoutY="412.0" prefHeight="17.0" prefWidth="149.0" />
-      <Label fx:id="moneyLabel" layoutX="379.0" layoutY="441.0" prefHeight="17.0" prefWidth="150.0" />
-      <Label fx:id="emailLabel" layoutX="377.0" layoutY="476.0" prefHeight="17.0" prefWidth="150.0" />
-      <Label fx:id="phoneNumberLabel" layoutX="380.0" layoutY="526.0" prefHeight="17.0" prefWidth="149.0" />
-      <TextField fx:id="passwordTextField" layoutX="900.0" layoutY="118.0" prefHeight="27.0" prefWidth="128.0" promptText="Password" styleClass="myTextField" />
+       <PasswordField fx:id="passwordField" layoutX="891.0" layoutY="125.0" prefHeight="25.0" prefWidth="128.0" promptText="Password" styleClass="myTextField" />
+      <TextField fx:id="firstNameTextField" layoutX="709.0" layoutY="240.0" prefHeight="25.0" prefWidth="128.0" promptText="First Name" styleClass="myTextField" />
+      <TextField fx:id="surnameTextField" layoutX="898.0" layoutY="240.0" prefHeight="25.0" prefWidth="128.0" promptText="Surname" styleClass="myTextField" />
+      <TextField fx:id="moneyTextField" layoutX="710.0" layoutY="565.0" prefHeight="25.0" prefWidth="128.0" promptText="Balance" styleClass="myTextField" />
+      <TextField fx:id="emailTextField" layoutX="716.0" layoutY="347.0" prefHeight="25.0" prefWidth="128.0" promptText="Email" styleClass="myTextField" />
+      <TextField fx:id="numberTextField" layoutX="891.0" layoutY="346.0" prefHeight="25.0" prefWidth="128.0" promptText="Phone" styleClass="myTextField" />
+      <CheckBox fx:id="passwordCheckBox" layoutX="908.0" layoutY="169.0" mnemonicParsing="false" text="Show password?" />
+      <Button layoutX="879.0" layoutY="560.0" mnemonicParsing="false" onAction="#register" prefHeight="25.0" prefWidth="159.0" text="Register" />
+      <TextField fx:id="imageDirectory" layoutX="716.0" layoutY="455.0" prefHeight="25.0" prefWidth="128.0" promptText="Image" styleClass="myTextField" />
+      <Label fx:id="usernameLabel" layoutX="676.0" layoutY="152.0" prefHeight="17.0" prefWidth="209.0" />
+      <Label fx:id="passwordLabel" layoutX="875.0" layoutY="152.0" prefHeight="17.0" prefWidth="150.0" />
+      <Label fx:id="firstnameLabel" layoutX="689.0" layoutY="272.0" prefHeight="17.0" prefWidth="149.0" />
+      <Label fx:id="surnameLabel" layoutX="876.0" layoutY="264.0" prefHeight="17.0" prefWidth="149.0" />
+      <Label fx:id="moneyLabel" layoutX="689.0" layoutY="590.0" prefHeight="17.0" prefWidth="150.0" />
+      <Label fx:id="emailLabel" layoutX="689.0" layoutY="372.0" prefHeight="17.0" prefWidth="150.0" />
+      <Label fx:id="phoneNumberLabel" layoutX="876.0" layoutY="372.0" prefHeight="17.0" prefWidth="149.0" />
+      <TextField fx:id="passwordTextField" layoutX="891.0" layoutY="124.0" prefHeight="27.0" prefWidth="128.0" promptText="Password" styleClass="myTextField" />
       <Button layoutY="27.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="102.0" text="Back" />
-      <MenuBar layoutX="1.0" prefHeight="25.0" prefWidth="1280.0">
+      <MenuBar layoutX="1.0" layoutY="-1.0" prefHeight="25.0" prefWidth="1280.0">
         <menus>
           <Menu mnemonicParsing="false" text="Loign or Register">
             <items>
@@ -49,7 +49,7 @@
           </Menu>
         </menus>
       </MenuBar>
-      <Button layoutX="848.0" layoutY="560.0" mnemonicParsing="false" onAction="#fileChooserOpen" text="..." />
+      <Button layoutX="851.0" layoutY="455.0" mnemonicParsing="false" onAction="#fileChooserOpen" text="..." />
       <Hyperlink layoutX="377.0" layoutY="559.0" onAction="#goToSellerRegisterMenu" prefHeight="23.0" prefWidth="150.0" text="Sign up as a Vendor">
          <font>
             <Font size="14.0" />
