--- a/src/main/resources/fxml/SellerRegisterMenu.fxml
+++ b/src/main/resources/fxml/SellerRegisterMenu.fxml
@@ -1,41 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import java.lang.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.LoginRegisterController.SellerRegisterController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="registerSellerMenu" stylesheets="@../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.LoginRegisterController.SellerRegisterController">
    <children>
-      <TextField fx:id="usernameTextField" layoutX="570.0" layoutY="95.0" />
-      <TextField fx:id="moneyTextField" layoutX="570.0" layoutY="464.0" prefHeight="25.0" prefWidth="149.0" />
-      <TextField fx:id="firstNameTextField" layoutX="570.0" layoutY="195.0" />
-      <TextField fx:id="surnameTextField" layoutX="570.0" layoutY="248.0" />
-      <TextField fx:id="emailTextField" layoutX="570.0" layoutY="300.0" />
-      <TextField fx:id="phoneNumberTextField" layoutX="570.0" layoutY="351.0" />
-      <TextField fx:id="companyTextField" layoutX="570.0" layoutY="408.0" />
-      <PasswordField fx:id="passwordField" layoutX="570.0" layoutY="145.0" />
-      <Label layoutX="513.0" layoutY="99.0" prefHeight="17.0" prefWidth="57.0" text="username" />
-      <Label layoutX="513.0" layoutY="149.0" prefHeight="17.0" prefWidth="57.0" text="password" />
-      <Label layoutX="513.0" layoutY="199.0" prefHeight="17.0" prefWidth="57.0" text="firstName" />
-      <Label layoutX="513.0" layoutY="252.0" prefHeight="17.0" prefWidth="57.0" text="surname" />
-      <Label layoutX="525.0" layoutY="304.0" prefHeight="17.0" prefWidth="33.0" text="Email" />
-      <Label layoutX="485.0" layoutY="355.0" prefHeight="17.0" prefWidth="80.0" text="phoneNumber" />
-      <Label layoutX="500.0" layoutY="412.0" text="Company" />
-      <Label layoutX="507.0" layoutY="468.0" text="Money" />
-      <Button layoutX="720.0" layoutY="535.0" mnemonicParsing="false" onAction="#openFileChooser" text="....." />
-      <Label layoutX="513.0" layoutY="539.0" text="image" />
-      <Button layoutX="570.0" layoutY="589.0" mnemonicParsing="false" onAction="#Register" prefHeight="45.0" prefWidth="150.0" text="Register" />
-      <CheckBox fx:id="passwordCheckBox" layoutX="719.0" layoutY="149.0" mnemonicParsing="false" text="show Password?" />
-      <TextField fx:id="imageDirectory" layoutX="570.0" layoutY="535.0" />
-      <TextField fx:id="passwordTextField" layoutX="570.0" layoutY="145.0" />
-      <Label fx:id="usernameLabel" layoutX="570.0" layoutY="120.0" prefHeight="17.0" prefWidth="222.0" />
-      <Label fx:id="passwordLabel" layoutX="570.0" layoutY="170.0" prefHeight="17.0" prefWidth="150.0" />
-      <Label fx:id="firstnameLabel" layoutX="570.0" layoutY="220.0" prefHeight="17.0" prefWidth="150.0" />
-      <Label fx:id="surnameLabel" layoutX="579.0" layoutY="273.0" prefHeight="17.0" prefWidth="149.0" />
-      <Label fx:id="emailLabel" layoutX="570.0" layoutY="325.0" prefHeight="17.0" prefWidth="149.0" />
-      <Label fx:id="phoneNumberLabel" layoutX="570.0" layoutY="376.0" prefHeight="17.0" prefWidth="149.0" />
-      <Label fx:id="companyNameLabel" layoutX="570.0" layoutY="433.0" prefHeight="17.0" prefWidth="149.0" />
-      <Label fx:id="moneyLabel" layoutX="570.0" layoutY="489.0" prefHeight="17.0" prefWidth="150.0" />
+      <TextField fx:id="usernameTextField" layoutX="715.0" layoutY="122.0" prefHeight="25.0" prefWidth="126.0" promptText="Username" styleClass="myTextField" />
+      <TextField fx:id="moneyTextField" layoutX="710.0" layoutY="564.0" prefHeight="25.0" prefWidth="149.0" promptText="Balance" styleClass="myTextField" />
+      <TextField fx:id="firstNameTextField" layoutX="710.0" layoutY="240.0" promptText="First Name" styleClass="myTextField" />
+      <TextField fx:id="surnameTextField" layoutX="901.0" layoutY="240.0" promptText="Surname" styleClass="myTextField" />
+      <TextField fx:id="emailTextField" layoutX="719.0" layoutY="348.0" promptText="Email" styleClass="myTextField" />
+      <TextField fx:id="phoneNumberTextField" layoutX="891.0" layoutY="345.0" promptText="Phone" styleClass="myTextField" />
+      <TextField fx:id="companyTextField" layoutX="901.0" layoutY="454.0" promptText="Company" styleClass="myTextField" />
+      <PasswordField fx:id="passwordField" layoutX="891.0" layoutY="122.0" promptText="Password" styleClass="myTextField" />
+      <Button layoutX="836.0" layoutY="454.0" mnemonicParsing="false" onAction="#openFileChooser" text="....." />
+      <Button layoutX="880.0" layoutY="562.0" mnemonicParsing="false" onAction="#Register" prefHeight="25.0" prefWidth="158.0" text="Register" />
+      <CheckBox fx:id="passwordCheckBox" layoutX="921.0" layoutY="164.0" mnemonicParsing="false" text="show Password?" />
+      <TextField fx:id="imageDirectory" layoutX="710.0" layoutY="454.0" prefHeight="25.0" prefWidth="117.0" promptText="Image" styleClass="myTextField" />
+      <TextField fx:id="passwordTextField" layoutX="891.0" layoutY="122.0" promptText="Password" styleClass="myTextField" />
+      <Label fx:id="usernameLabel" layoutX="682.0" layoutY="155.0" prefHeight="17.0" prefWidth="213.0" />
+      <Label fx:id="passwordLabel" layoutX="875.0" layoutY="149.0" prefHeight="17.0" prefWidth="150.0" />
+      <Label fx:id="firstnameLabel" layoutX="694.0" layoutY="265.0" prefHeight="17.0" prefWidth="150.0" />
+      <Label fx:id="surnameLabel" layoutX="876.0" layoutY="265.0" prefHeight="17.0" prefWidth="149.0" />
+      <Label fx:id="emailLabel" layoutX="687.0" layoutY="376.0" prefHeight="17.0" prefWidth="149.0" />
+      <Label fx:id="phoneNumberLabel" layoutX="876.0" layoutY="376.0" prefHeight="17.0" prefWidth="149.0" />
+      <Label fx:id="companyNameLabel" layoutX="876.0" layoutY="481.0" prefHeight="17.0" prefWidth="149.0" />
+      <Label fx:id="moneyLabel" layoutX="687.0" layoutY="589.0" prefHeight="17.0" prefWidth="150.0" />
       <Button layoutY="25.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="66.0" text="Back" />
       <MenuBar prefHeight="25.0" prefWidth="1280.0">
         <menus>
@@ -54,7 +47,17 @@
           </Menu>
         </menus>
       </MenuBar>
-      <Hyperlink layoutX="592.0" layoutY="653.0" prefHeight="23.0" prefWidth="107.0" text="Register as buyer"  onAction="#goToBuyerRegisterMenu"/>
+      <Hyperlink layoutX="369.0" layoutY="561.0" onAction="#goToBuyerRegisterMenu" prefHeight="28.0" prefWidth="171.0" text="Sign Up as a Customer">
+         <font>
+            <Font size="14.0" />
+         </font>
+         <effect>
+            <DropShadow blurType="GAUSSIAN" height="15.07" radius="7.7775" spread="0.22" width="18.04">
+               <color>
+                  <Color red="1.0" green="1.0" blue="1.0" />
+               </color>
+            </DropShadow>
+         </effect></Hyperlink>
       
 
    </children>
