--- a/src/main/resources/fxml/DiscountsMenu.fxml
+++ b/src/main/resources/fxml/DiscountsMenu.fxml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="View.Menus.MenuController.SalesMenuController"
-            prefHeight="720.0" prefWidth="1280.0">
-    <Button layoutY="25.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="58.0" text="Back"  onAction="#back" />
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="userBackground" stylesheets="@../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.SalesMenuController">
+    <Button layoutY="25.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="58.0" text="Back" />
 
 
 
