--- a/src/main/resources/fxml/BuyerRegisterMenu.fxml
+++ b/src/main/resources/fxml/BuyerRegisterMenu.fxml
@@ -32,7 +32,7 @@
       <Label fx:id="phoneNumberLabel" layoutX="876.0" layoutY="372.0" prefHeight="17.0" prefWidth="149.0" />
       <TextField fx:id="passwordTextField" layoutX="891.0" layoutY="124.0" prefHeight="27.0" prefWidth="128.0" promptText="Password" styleClass="myTextField" />
       <Button layoutY="27.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="102.0" text="Back" />
-      <MenuBar layoutX="1.0" layoutY="-1.0" prefHeight="25.0" prefWidth="1280.0">
+      <MenuBar layoutY="-1.0" prefHeight="27.0" prefWidth="1281.0" styleClass="myMenuBar">
         <menus>
           <Menu mnemonicParsing="false" text="Loign or Register">
             <items>
