--- a/src/main/resources/fxml/ShopMenu.fxml
+++ b/src/main/resources/fxml/ShopMenu.fxml
@@ -5,7 +5,7 @@
 
 <AnchorPane fx:id="anchorPane" prefHeight="720.0" prefWidth="1280.0" styleClass="userBackground" stylesheets="@../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.ShopMenuController">
    <children>
-       <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
+       <MenuBar prefHeight="25.0" prefWidth="1280.0" styleClass="myMenuBar">
            <menus>
                <Menu mnemonicParsing="false" text="option">
                    <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
